style.css
footer { 
    font-size: 11px; 
    text-align: center; 
}
    
footer a { 
    color: hsl(218, 44%, 22%); 
}

body {
    background-color: hsl(212, 45%, 89%);
    width: 1440px;
    height: 568px;
}

@media only screen and (max-width: 600px) {
    body {width: 375px; height: 200px;}
  }

main {
    background-color: hsl(0, 0%, 100%);
    text-align: center;
    padding: 15px;
    width:min-content;
    margin: auto;
    border-radius: 16px;
    margin-top: 200px;
    box-shadow: 1px 2px 20px #8888;
}

.text {
    padding-left: 15px;
    padding-right: 15px;
}

img {
    border-radius: 10px;
    width: 300px;
}

p {
    font-size: 15px;
    font-weight: 400;
    font-family: 'outfitregular';
    color: hsl(220, 15%, 55%);
}

h1 {
    font-family:'outfitsemibold';
    font-weight: 600;
    font-size: 20px;
}

@font-face {
    font-family: 'outfitbold';
    src: url('font/outfit-bold-webfont.woff2') format('woff2'),
         url('font/outfit-bold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'outfitregular';
    src: url('font/outfit-regular-webfont.woff2') format('woff2'),
         url('font/outfit-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'outfitsemibold';
    src: url('font/outfit-semibold-webfont.woff2') format('woff2'),
         url('font/outfit-semibold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

